--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-d3-tree",
-  "version": "1.5.0",
+  "name": "@krzysztofkarol/react-d3-tree",
+  "version": "1.5.1",
   "description": "React component to create interactive D3 tree hierarchies",
   "main": "lib/react-d3-tree.min.js",
   "scripts": {
@@ -55,7 +55,6 @@
     "d3": "3.5.17",
     "deep-equal": "^1.0.1",
     "prop-types": "^15.5.10",
-    "react-transition-group": "^1.1.3",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
@@ -65,6 +64,7 @@
     "babel-jest": "^19.0.0",
     "babel-loader": "7.0.0",
     "babel-plugin-add-module-exports": "0.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
@@ -79,6 +79,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
     "husky": "^0.14.3",
+    "isomorphic-style-loader": "^4.0.0",
     "jest": "^19.0.2",
     "jsdoc-to-markdown": "^3.0.0",
     "lint-staged": "^4.1.3",
@@ -89,6 +90,7 @@
     "react-docgen": "^2.16.0",
     "react-dom": "^15.6.0",
     "react-test-renderer": "^15.5.4",
+    "react-transition-group": "1.1.3",
     "regenerator-runtime": "^0.10.5",
     "rimraf": "^2.6.1",
     "style-loader": "^0.17.0",
